// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CountDownClock renders all zeros when the endDate has been reached 1`] = `
<div
  class="countDown"
  data-testid="counter-container"
>
  <div>
    <span>
      0
    </span>
    <span>
      0
    </span>
    <span>
      45
    </span>
    <span>
      Days
    </span>
  </div>
  <div>
    <span>
      0
    </span>
    <span>
      0
    </span>
    <span>
      24
    </span>
    <span>
      Hours
    </span>
  </div>
  <div>
    <span>
      0
    </span>
    <span>
      0
    </span>
    <span>
      60
    </span>
    <span>
      Minutes
    </span>
  </div>
  <div>
    <span>
      0
    </span>
    <span>
      0
    </span>
    <span>
      60000
    </span>
    <span>
      Seconds
    </span>
  </div>
</div>
`;

exports[`CountDownClock renders correctly with a future endDate 1`] = `
<div
  class="countDown"
  data-testid="counter-container"
>
  <div>
    <span>
      14.99998263888889
    </span>
    <span>
      14
    </span>
    <span>
      45
    </span>
    <span>
      Days
    </span>
  </div>
  <div>
    <span>
      23.999583333333305
    </span>
    <span>
      23
    </span>
    <span>
      24
    </span>
    <span>
      Hours
    </span>
  </div>
  <div>
    <span>
      59.974999999998545
    </span>
    <span>
      59
    </span>
    <span>
      60
    </span>
    <span>
      Minutes
    </span>
  </div>
  <div>
    <span>
      58500
    </span>
    <span>
      58
    </span>
    <span>
      60000
    </span>
    <span>
      Seconds
    </span>
  </div>
</div>
`;
